retrieveOutput/objects/SMS_Log__c.object
<CustomObject>
    <description>Logs outgoing SMS</description>
    <fields>
        <fullName>from__c</fullName>
        <description>SMS sender number</description>
        <label>from</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>msg__c</fullName>
        <description>Message that was sent as SMS</description>
        <label>msg</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>to__c</fullName>
        <description>To represents the SMS receiving number</description>
        <label>to</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SMS_Log</label>
    <nameField>
        <label>SMS_Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>